--- a/lecture-schedule.html
+++ b/lecture-schedule.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/component.css" type="text/css">
 </head>
 <body>
+    라라라
     <header class="header">
         <h1 class="d-none">해더</h1>
             <!-- <img src="" alt="뒤로가기"> -->
